--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       </nav>
       <h1>La Historia de la Pizza</h1>
       <div class="container-sm " >
+        <button type="button" class="btn btn-secondary" onclick="cambiarColor();">Cambia de Color el Fondo</button>
        <section>
         <p>La pizza moderna se inventó originalmente en Nápoles, Italia, pero la palabra pizza es de origen griego, derivada de la palabra griega pēktos que significa sólido o coagulado. Los antiguos griegos cubrían su pan con aceites, hierbas y queso. La primera gran innovación que llevó a la pizza de pan plano fue el uso de tomate como aderezo. Era común que los pobres del área alrededor de Nápoles agregaran tomate a su pan plano a base de levadura, y así comenzó la pizza.
 
@@ -61,7 +62,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.5/dist/sweetalert2.all.min.js"></script>
-    <script src="JS.js/swettAlert.js"></script>
+    <script src="JS.js/acciones.js"></script>
+    <script src="JS.js/sweetAlert.js"></script>
+    
 
   </body>
 </html>
