--- a/Menu.html
+++ b/Menu.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link href="estilos.css" rel="stylesheet" type="text/css">
-    <title>Pizzeria Di´antonio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <link href="estilos.css" rel="stylesheet" type="text/css">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <title>Pizzeria Di´antonio</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,7 +45,10 @@
                   ¡Para los amantes del pepperoni! Mozzarella y doble pepperoni.</p>
             </div>
             <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
+              <small class="text-muted">
+              <button>Muestrame el Precio 
+                !!!</button>
+              <p style="display: none">14.990$</p></small>
             </div>
           </div>
         </div>
@@ -51,10 +57,12 @@
             <img src="https://images.pizzahut.services/vol/phcl/images/content/productos/pitd_c.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PIZZA 2</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">Jamon - Quesp - Tocino</p>
             </div>
             <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
+              <small class="text-muted">
+                <button>Muestrame el Precio !!!</button>
+                <p style="display: none">12.990$</p></small>
             </div>
           </div>
         </div>
@@ -63,10 +71,12 @@
             <img src="https://images.pizzahut.services/vol/phcl/images/content/productos/pihw_c.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PIZZA 3</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text">Jamon - Queso -Piña </p>
             </div>
             <div class="card-footer">
-              <small class="text-muted">Last updated 3 mins ago</small>
+              <small class="text-muted">
+                <button>Muestrame el Precio !!!</button>
+                <p style="display: none">8.990$</p></small>
             </div>
           </div>
         </div>
@@ -77,10 +87,14 @@
         <h3>Pidenos por Whatsapp!</h3>
         <img src="imagenes/logo-wasap.png" width="50" height="50"> </a>  
       </div>
+     
     <footer>
         <h2>Pizzeria Di´Antonio</h2>
      </footer>  
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-</body>
+    <script src="JS.js/acciones.js"></script>
+    <script src="JS.js/sweetAlert.js"></script>
+  </body>
 </html>
