--- a/Promociones.html
+++ b/Promociones.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link href="estilos.css" rel="stylesheet" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Pizzeria Di´antonio</title>
 </head>
 <body>
@@ -31,7 +32,7 @@
         </div>
       </nav>
       <h1>Promociones</h1>
-      <div class ="container-xl">
+      <div class="container-xl">
       <div class="card mb-3" style="max-width: 540px align-center;">
         <div class="row g-0">
           <div class="col-md-4">
@@ -42,7 +43,8 @@
               <h5 class="card-title">MY-Super Combo</h5>
               <p class="card-text">My Box
                 Aprovecha y disfruta My Box :Pizza Individual (Doble Pepperoni, Italiana o Nueva Veggie) + 6 chicken pops + 3 empanadas + papas pequeñas + bebida pequeña.</p>
-              <p class="card-text"><small class="text-muted">YAME YAAAAAAAAAAAAAAAAAAAAAA</small></p>
+              <p class="card-text"><small class="text-muted"> <button>Muestrame el Precio !!!</button>
+                <p style="display: none">5.990$</p></small></p>
             </div>
           </div>
         </div>
@@ -57,7 +59,8 @@
               <h5 class="card-title">Combo Familiar Cheesy Pepperoni</h5>
               <p class="card-text">My Box
                 Aprovecha y disfruta My Box :Pizza Individual (Doble Pepperoni, Italiana o Nueva Veggie) + 6 chicken pops + 3 empanadas + papas pequeñas + bebida pequeña.</p>
-              <p class="card-text"><small class="text-muted">en 15 minutos en la puerta de tu casa</small></p>
+              <p class="card-text"><small class="text-muted"> <button>Muestrame el Precio !!!</button>
+                <p style="display: none">10.990$</p></small></p>
             </div>
           </div>
         </div>
@@ -71,7 +74,8 @@
             <div class="card-body">
               <h5 class="card-title">Combo Supremo</h5>
               <p class="card-text">Familiar Pepperoni, Italiana o Meaty + Papas Supremas dobles + 10 Chicken Pops + 4 Empanaditas de Queso + Bebida 1,5 Lts.</p>
-              <p class="card-text"><small class="text-muted">Libre de Colesterol</small></p>
+              <p class="card-text"><small class="text-muted"> <button>Muestrame el Precio !!!</button>
+                <p style="display: none">14.990$</p></small></p>
             </div>
           </div>
         </div>
@@ -82,5 +86,7 @@
      </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-</body>
+    <script src="JS.js/acciones.js"></script>
+    <script src="JS.js/sweetAlert.js"></script>
+  </body>
 </html>
