cambio color botones
cambio color botones
color de numeros negros
un margin al numero
alineacion izquierda
cambio de lugar  signo peso

--- a/Menu.html
+++ b/Menu.html
@@ -46,9 +46,9 @@
             </div>
             <div class="card-footer">
               <small class="text-muted">
-              <button>Muestrame el Precio 
-                !!!</button>
-              <p style="display: none">14.990$</p></small>
+              <button type="button" class="btn btn-dark">Muestrame el Precio 
+                !!</button>
+              <p id="p1" style="display: none">14.990$</p></small>
             </div>
           </div>
         </div>
@@ -57,12 +57,13 @@
             <img src="https://images.pizzahut.services/vol/phcl/images/content/productos/pitd_c.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PIZZA 2</h5>
-              <p class="card-text">Jamon - Quesp - Tocino</p>
+              <p class="card-text">Jamon - Queso - Tocino</p>
             </div>
             <div class="card-footer">
               <small class="text-muted">
-                <button>Muestrame el Precio !!!</button>
-                <p style="display: none">12.990$</p></small>
+                <button type="button" class="btn btn-dark">Muestrame el Precio 
+                  !!</button>
+                <p id="p1" style="display: none">14.990$</p></small>
             </div>
           </div>
         </div>
@@ -75,24 +76,23 @@
             </div>
             <div class="card-footer">
               <small class="text-muted">
-                <button>Muestrame el Precio !!!</button>
-                <p style="display: none">8.990$</p></small>
+                <button type="button" class="btn btn-dark">Muestrame el Precio 
+                  !!</button>
+                <p id="p1" style="display: none">14.990$</p></small>
             </div>
           </div>
         </div>
       </div>
       </div>
       <div class= "container-sm text-center" >
-      <a class="botonVerde" href="https://wa.me/56948588979/?text=Hola! Gracias por preferirnos, ya elegiste tu Pizza ? haz tu pedido!" target="_blank">
-        <h3>Pidenos por Whatsapp!</h3>
+      <a class="botonVerde" href="https://wa.me/56948588979/?text=Hola! Gracias por preferirnos, ya elegiste tu Pizza ? Haz tu pedido!" target="_blank">
+        <h3>Haz tu pedido por Whatsapp!</h3>
         <img src="imagenes/logo-wasap.png" width="50" height="50"> </a>  
       </div>
-     
     <footer>
         <h2>Pizzeria Di´Antonio</h2>
      </footer>  
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
     <script src="JS.js/acciones.js"></script>
     <script src="JS.js/sweetAlert.js"></script>
