--- a/Promociones.html
+++ b/Promociones.html
@@ -33,7 +33,7 @@
       </nav>
       <h1>Promociones</h1>
       <div class="container-xl">
-      <div class="card mb-3" style="max-width: 540px align-center;">
+       <div class="card mb-3" style="max-width: 540px align-center;">
         <div class="row g-0">
           <div class="col-md-4">
             <img src="https://images.pizzahut.services/vol/phcl/images/content/promociones/mybox_c.png" class="img-fluid rounded-start" alt="...">
@@ -43,8 +43,9 @@
               <h5 class="card-title">MY-Super Combo</h5>
               <p class="card-text">My Box
                 Aprovecha y disfruta My Box :Pizza Individual (Doble Pepperoni, Italiana o Nueva Veggie) + 6 chicken pops + 3 empanadas + papas pequeñas + bebida pequeña.</p>
-              <p class="card-text"><small class="text-muted"> <button>Muestrame el Precio !!!</button>
-                <p style="display: none">5.990$</p></small></p>
+              <small class="text-muted">
+                <button type="button" class="btn btn-dark">Muestrame el Precio !!</button>
+                <p id="p1" style="display: none">$ 5.990</p></small>
             </div>
           </div>
         </div>
@@ -59,8 +60,10 @@
               <h5 class="card-title">Combo Familiar Cheesy Pepperoni</h5>
               <p class="card-text">My Box
                 Aprovecha y disfruta My Box :Pizza Individual (Doble Pepperoni, Italiana o Nueva Veggie) + 6 chicken pops + 3 empanadas + papas pequeñas + bebida pequeña.</p>
-              <p class="card-text"><small class="text-muted"> <button>Muestrame el Precio !!!</button>
-                <p style="display: none">10.990$</p></small></p>
+              <small class="text-muted">
+                <button type="button" class="btn btn-dark">Muestrame el Precio 
+                  !!</button>
+                <p id="p1" style="display: none">$ 10.990</p></small>
             </div>
           </div>
         </div>
@@ -74,19 +77,27 @@
             <div class="card-body">
               <h5 class="card-title">Combo Supremo</h5>
               <p class="card-text">Familiar Pepperoni, Italiana o Meaty + Papas Supremas dobles + 10 Chicken Pops + 4 Empanaditas de Queso + Bebida 1,5 Lts.</p>
-              <p class="card-text"><small class="text-muted"> <button>Muestrame el Precio !!!</button>
-                <p style="display: none">14.990$</p></small></p>
+              <small class="text-muted">
+                <button type="button" class="btn btn-dark">Muestrame el Precio 
+                  !!</button>
+                <p id="p1" style="display: none">$ 14.990</p></small>
             </div>
           </div>
         </div>
-      </div>
-      </div>
+      </div> 
+    </div>
       <footer>
-        <h2>Pizzeria Di´Antonio</h2>  
+      <h2>Pizzeria Di´Antonio</h2>  
      </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+      integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
     <script src="JS.js/acciones.js"></script>
     <script src="JS.js/sweetAlert.js"></script>
-  </body>
-</html>
+    </body>
+    
+    </html>
