cambio signo peso

--- a/Menu.html
+++ b/Menu.html
@@ -63,7 +63,7 @@
               <small class="text-muted">
                 <button type="button" class="btn btn-dark">Muestrame el Precio 
                   !!</button>
-                <p id="p1" style="display: none">$ 10.990$</p></small>
+                <p id="p1" style="display: none">$ 10.990</p></small>
             </div>
           </div>
         </div>
@@ -78,7 +78,7 @@
               <small class="text-muted">
                 <button type="button" class="btn btn-dark">Muestrame el Precio 
                   !!</button>
-                <p id="p1" style="display: none">$11.990$</p></small>
+                <p id="p1" style="display: none">$ 11.990</p></small>
             </div>
           </div>
         </div>
