alerta realizar pedido
alerta boton realizar pedido con swal
agrego carousel en el menu

--- a/Menu.html
+++ b/Menu.html
@@ -8,6 +8,8 @@
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link href="estilos.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <link  rel="stylesheet"href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"/>
 
   <title>Pizzeria Di´antonio</title>
 </head>
@@ -83,6 +85,18 @@
           </div>
         </div>
       </div>
+<div class="container sm">
+      <div class="carousel" >
+        <div class="carousel__slide" data-fancybox="gallery" href="imagenes/pizza1.jpg"><img id="carousel"class="rounded" src="imagenes/pizza1.jpg"> </div>
+        <div class="carousel__slide" data-fancybox="gallery" href="imagenes/pizza2.jpg"><img id="carousel"class="rounded" src="imagenes/pizza2.jpg"></div>
+        <div class="carousel__slide" data-fancybox="gallery" href="imagenes/pizza3.jpg"><img id="carousel"class="rounded" src="imagenes/pizza3.jpg"></div>
+        <div class="carousel__slide" data-fancybox="gallery" href="imagenes/pizza4.jpg"><img id="carousel"class="rounded" src="imagenes/pizza4.jpg"></div>
+        <div class="carousel__slide" data-fancybox="gallery" href="imagenes/pizza5.jpg"><img id="carousel"class="rounded" src="imagenes/pizza5.jpg"></div>
+
+      </div>
+</div>
+
+
       </div>
       <div class= "container-sm text-center" >
       <a class="botonVerde" href="https://wa.me/56948588979/?text=Hola! Gracias por preferirnos, ya elegiste tu Pizza ? Haz tu pedido!" target="_blank">
