--- a/pedidos.html
+++ b/pedidos.html
@@ -1,91 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <link href="estilos.css" rel="stylesheet" type="text/css">
-    <title>Pizzeria Di´antonio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link href="estilos.css" rel="stylesheet" type="text/css">
+  <title>Pizzeria Di´antonio</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-sm">
-          <a class="navbar-brand" href="index.html">Pizzeria Di´Antonio</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Menu.html">Menú</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Promociones.html">Promociones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="pedidos.html">Pedidos</a>
-              </li>
-            </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-sm">
+      <a class="navbar-brand" href="index.html">Pizzeria Di´Antonio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Menu.html">Menú</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Promociones.html">Promociones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pedidos.html" onclick="showAlert()" id="pedidos">Pedidos</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <h1>Pedidos</h1>
+  <div class="container-sm" align="center">
+    <form class="needs-validation" novalidate>
+      <div class="form-row">
+        <div class="col-md-6 mb-3">
+          <label for="validationTooltip01">Nombre Completo</label>
+          <input type="text" class="form-control" id="nombre" placeholder="Marcos " required>
+          <div class="valid-tooltip">
+            Looks good!
           </div>
         </div>
-      </nav>
-      <h1>Pedidos</h1>
-      <div class="container-sm" align="center">
-        <form class="needs-validation" novalidate>
-          <div class="form-row">
-            <div class="col-md-6 mb-3">
-              <label for="validationTooltip01">Nombre Completo</label>
-              <input type="text" class="form-control" id="validationTooltip01" placeholder="Marcos Toro" required>
-              <div class="valid-tooltip">
-                Looks good!
-              </div>
-            </div>
-            <div class="col-md-6 mb-3">
-              <label for="validationTooltip02">Direccion</label>
-              <input type="text" class="form-control" id="validationTooltip02" placeholder="Moneda 112" required>
-              <div class="valid-tooltip">
-                Looks good!
-              </div>
-            </div>
+        <div class="col-md-6 mb-3">
+          <label for="validationTooltip02">Direccion</label>
+          <input type="text" class="form-control" id="direccion" placeholder="Moneda 112" required>
+          <div class="valid-tooltip">
+            Looks good!
           </div>
-          <div class="form-row">
-            <div class="col-md-6 mb-3">
-              <label for="validationTooltip03">Ciudad</label>
-              <input type="text" class="form-control" placeholder="Santiago" id="validationTooltip03" required>
-              <div class="invalid-tooltip">
-                Please provide a valid city.
-              </div>
-            </div>
-            <div class="col-md-3 mb-3">
-              <label for="validationTooltip04">Comuna</label>
-              <select class="custom-select" id="validationTooltip04" required>
-                <option selected disabled value="">Seleccione Comuna</option>
-                <option>Santiago</option>
-                <option>Colina</option>
-                <option>Pudahuel</option>
-                <option>Las Condes</option>
-                <option>Providencia</option>
-              </select>
-              <div class="invalid-tooltip">
-                Please select a valid state.
-              </div>
-            </div>
-            <div class="col-md-3 mb-3">
-              <label for="validationTooltip05">Numero de Tarjeta</label>
-              <input type="text" class="form-control" placeholder="xxxx-xxxx-xxxx-xxxx" id="validationTooltip05" required>
-              <div class="invalid-tooltip">
-                Please provide a valid zip.
-              </div>
-            </div>
-          </div>
-          <button class="btn btn-warning" type="submit">Realizar Pago</button>
-        </form>       
+        </div>
       </div>
-      <footer>
-        <h2>Pizzeria Di´Antonio</h2> 
-     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+      <div class="form-row">
+        <div class="col-md-6 mb-3">
+          <label for="validationTooltip03">Ciudad</label>
+          <input type="text" class="form-control" placeholder="Santiago" id="ciudad" required>
+          <div class="invalid-tooltip">
+            Please provide a valid city.
+          </div>
+        </div>
+        <div class="col-md-6 mb-3">
+          <label for="validationTooltip04">Comuna</label>
+          <select class="form-select" id="comuna" required>
+            <option selected disabled value="">Seleccione Comuna</option>
+            <option>Santiago</option>
+            <option>Colina</option>
+            <option>Pudahuel</option>
+            <option>Las Condes</option>
+            <option>Providencia</option>
+          </select>
+          <div class="invalid-tooltip">
+            Please select a valid state.
+          </div>
+        </div>
+        <div class="col-md-6 mb-3">
+          <label for="validationTooltip05">Numero de Telefono</label>
+          <input type="text" class="form-control" placeholder="+569-xxxx-xxxx" id="telefono" required>
+          <div class="invalid-tooltip">
+            Please provide a valid zip.
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+
+  <div class="container" align="center">
+    <button type="sub" class="btn btn-warning" data-toggle="modal" data-target="#myModal">
+      Realizar Pedido
+    </button>
+    <div class="modal" id="myModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Pedido Realizado</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <p>Su pedido ha sido realizado...</p>
+            <p>Si tiene alguna duda, contactese con nosotros.</p>
+            <p> Gracias por su preferencia!</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <h2>Pizzeria Di´Antonio</h2>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+    integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+    integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+    crossorigin="anonymous"></script>
+
+    <script src="JS.js/acciones.js"></script>
+  <script src="JS.js/sweetAlert.js"></script>
 </body>
 </html>
