--- a/Promociones.html
+++ b/Promociones.html
@@ -86,10 +86,14 @@
         </div>
       </div> 
     </div>
+    <div class= "container-sm text-center" >
+      <a class="botonVerde" href="https://wa.me/56948588979/?text=Hola! Gracias por preferirnos, ya elegiste tu Pizza ? Haz tu pedido!" target="_blank">
+        <h3>Haz tu pedido por Whatsapp!</h3>
+        <img src="imagenes/logo-wasap.png" width="50" height="50"> </a>  
+      </div>
       <footer>
       <h2>Pizzeria Di´Antonio</h2>  
      </footer>
-     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
